# progetto

./: .gitignore  License.md
FreeFemCode/: duale_mista.edp~  gnuplot.edp  mesh_cross.edp  mesh_cross.edp~  pressure.gnuplot  pressure.pdf_t  pressure.sh  pressure.tex
FreeFemCode/Bifu_Y/: bifu_y.edp  bifu_y.edp~  mesh.edp
FreeFemCode/Bifurcation/: TestSquare.edp  TestTriangle.edp  b  darcy_precond.edp  darcy_precond.edp~  duale_mista.edp  duale_mista.edp~  esporta.m  ff2matlab.m  ffglut_0000.ppm  matriceGrande  matriceGrande~  mesh_bifurcation.edp  mesh_bifurcation.edp~  p  single_fracture.edp  single_fracture.edp~
FreeFemCode/Cross/: b  darcy_precond.edp  darcy_precond.edp~  duale_mista.edp  duale_mista.edp~  esporta.m  matriceGrande  matriceGrande~  mesh_cross.edp  mesh_cross.edp~  p  pressione_inters_zoom.fig  pressione_inters_zoom.pdf_t  pressure.eps  pressure.txt  pressure_octave.m
FreeFemCode/Cross_bifu/: cross_bifu.edp  cross_bifu.edp~  flusso.eps  mesh.edp  mesh.edp~  mesh.eps  meshBifu.edp  meshBifu.edp~  pressione.eps
FreeFemCode/DoppiaBifu_Cross/: Doppiabifu.edp  Doppiabifu.edp~  DoppiabifuErr.edp  mesh.edp  mesh.edp~  meshErr.edp  pressione
FreeFemCode/Doppia_Bifu/: Doppia_bifu.edp  flusso  mesh.edp  pressione
LaTex/: Compile.sh  Copertina.aux  Copertina.tex  Main-frn.tex  Main.aux  Main.bbl  Main.blg  Main.lof  Main.lot  Main.out  Main.tex  Main.toc  Makefile  appendice.aux  bibliografia.aux  bibliografia.bib  bibliografia.tex  cap1.aux  cap1.tex  cap2.aux  cap2.tex  cap3.aux  cap4.aux  cap4.tex  cap5.aux  cap5.tex  dedica.tex  glossario.aux  glossario.tex  introduzione.tex  main.toc  prefazione.aux  subcap3_1.aux  subcap3_1.tex  subcap3_2.aux  subcap3_2.tex  subcap3_3.aux  subcap3_3.tex  subcap3_4.tex
LaTex/Capitoli Daniele/: cap3.tex  cap4.tex
LaTex/img/: ConfrontoArchitetture.eps  ConfrontoArchitetture.tiff  DarcyFractured.eps  bifurcation.eps  cross.eps  descrizioneprogetto.eps  descrizioneprogetto.tiff  esempioarchitettura.eps  esempioarchitettura.tiff  etltransactionconsolidator.eps  nuovaimplementazione.eps  soluzioneCA.eps  soluzioneCA.tiff  soluzionigartner.eps  soluzionigartner.tiff
Make/: CMakeLists.txt
Make/Claudia/: Makefile
Make/Maria/: Makefile
MaterialeProgettoPACS/: readme.txt  readme.txt~
MaterialeProgettoPACS/Bifurcation/: bifurcation.aux  bifurcation.bbl  bifurcation.bib  bifurcation.bib~  bifurcation.blg  bifurcation.tex  bifurcation.tex~
Param_Mesh_Flat/: Makefile  data  fratture  main.cc  matrice.mm  out.make  rhs.mm
Param_Mesh_Flat/include/: FractureData.h  FractureData.h~  IntersectData.h  LevelSetData.h  LevelSetData.h~  LevelSetHandler.h~  MeshHandler.h  UsefulFunctions.h~  XFEMOperators.h  XFEMOperators.h~
Param_Mesh_Flat/src/: BC.cc  DarcyFractured.cc  Exporter.cc  FractureData.cc  FractureHandler.cc  FractureIntersect.cc  FracturesSet.cc  LevelSetData.cc  LevelSetHandler.cc  MediumData.cc  MeshHandler.cc  XFEMOperators.cc
Param_Mesh_Flat/vtk/: RegionMesh.vtk  cmeshF2-1.vtk  cmeshF2-2.vtk  cuttedElements.vtk  fracturePressure0.vtk  fracturePressure1.vtk  fracturePressure2.vtk
bifurcation/: .project  Bifurcation  Bifurcation02  Bifurcation03  Bifurcation~  Cross  DoppioCross  DoppioCross4Fratture~  DoppioCross~  Doxyfile  Doxyfile~  INSTALL  INSTALL~  Makefile  Makefile~  commenti  data  data2  data2~  data~  file.txt  main.cc  make.dep  matrice.mm  matrici.m  rhs.mm
bifurcation/Matlab/: matrice.mm  matrici.m  rhs.mm
bifurcation/dati/: Bifurcation  Bifurcation02  Bifurcation03  Bifurcation03~  Bifurcation04  Bifurcation04~  Bifurcation06  Bifurcation06~  DoppiaBifuCross  DoppiaBifuCross02~  DoppiaBifuCross~  DoppiaBifurcation  DoppiaBifurcation~  DoppioCross4Fratture  DoppioCross4Fratture~  VerticalCrossandBifurcation  VerticalDubleCrossandBirfurcation  Y  data
bifurcation/html/: index.html
bifurcation/include/: BC.h  BCHandler.h  Core.h  DarcyFractured.h  Exporter.h  FractureData.h  FractureHandler.h  FractureIntersect.h  FracturesSet.h  Geometry.h  GetPot  IntersectData.h  LevelSetData.h  MediumData.h  (+13 more)
codice_network_matlab/: lista_fratture_param.m  lista_fratture_param2.m  lista_fratture_param3.m  lista_fratture_param4.m  multi_intersection_mixed_param.m  solver_darcy_1d_multi_disc_KIparam.m
data/: biforcazione
file_configurazione/: CMakeLists.txt  CMakeLists.txt~  Doxyfile~
file_configurazione/consegna/: CMakeLists.txt  Doxyfile  INSTALL
file_configurazione/consegna/include/: BCHandler.h  DarcyFractured.h  FractureIntersect.h  FracturesSet.h  LevelSetData.h  MediumData.h  MeshHandler.h  QuadrilaterData.h  XFEMOperators.h
file_configurazione/consegna/src/: BC.cc  CMakeLists.txt  CMakeLists.txt~  FractureIntersect.cc  IntersectData.cc  LevelSetHandler.cc  MatrixBifurcationHandler.cc  QuadrilaterData.cc  StringUtility.cc  XFEMOperators.cc
file_configurazione/consegna/test/: CMakeLists.txt
file_configurazione/consegna/test/Test1/: Bifurcation  CMakeLists.txt  CMakeLists.txt~  Test1.cc
file_configurazione/consegna/test/Test2/: CMakeLists.txt  CMakeLists.txt~
file_configurazione/consegna/test/Test3/: Bifurcation  CMakeLists.txt  CMakeLists.txt~  Test3.cc  Test3.cc~
file_configurazione/consegna/test/dati/: Bifurcation02~  Bifurcation03  Bifurcation05  Bifurcation05~  Bifurcation06  Cross  Cross~  DoppiaBifuCross  DoppiaBifuCross02  DoppiaBifurcation  DoppioCross  VerticalBifurcation  VerticalBifurcation~  VerticalCrossandBifurcation  VerticalDubleCrossandBirfurcation  VerticalDubleCrossandBirfurcation~  Y  Y~
network_PACS/: .project  Makefile  Makefile_old~  README  data  main.cc  matrice.mm  matrice_frac.mm  out.make~  rhs.mm
network_PACS_solonet/: .project  Makefile  Makefile_oo  Makefile~  data  main.cc  matrice.mm  mm_reader.m  rhs.mm
y/: Makefile  main.cc  matrice.mm  rhs.mm
(+1850 files in other folders)
